@@ -16,7 +16,6 @@
  */
 package org.apache.kafka.raft;
 
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Objects;
@@ -181,7 +180,7 @@ public final class Batch<T> implements Iterable<T> {
             appendTimestamp,
             sizeInBytes,
             baseOffset + records.size() - 1,
-            Collections.emptyList(),
+            List.of(),
             records
         );
     }
@@ -219,7 +218,7 @@ public final class Batch<T> implements Iterable<T> {
             sizeInBytes,
             baseOffset + records.size() - 1,
             records,
-            Collections.emptyList()
+            List.of()
         );
     }
 }
