@@ -19,7 +19,6 @@ package org.apache.kafka.server.log.remote.metadata.storage;
 import org.apache.kafka.clients.CommonClientConfigs;
 import org.apache.kafka.test.TestUtils;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -46,7 +45,7 @@ public class RemoteLogMetadataManagerTestUtils {
     public static class Builder {
         private String bootstrapServers;
         private boolean startConsumerThread;
-        private Map<String, Object> overrideRemoteLogMetadataManagerProps = Collections.emptyMap();
+        private Map<String, Object> overrideRemoteLogMetadataManagerProps = Map.of();
         private Supplier<RemotePartitionMetadataStore> remotePartitionMetadataStore = RemotePartitionMetadataStore::new;
         private Function<Integer, RemoteLogMetadataTopicPartitioner> remoteLogMetadataTopicPartitioner = RemoteLogMetadataTopicPartitioner::new;
 
